# tca-rs

./: Cargo.toml  Readme.md
src/: action_mapper.rs  action_sender.rs  change_observer.rs  effect.rs  engine.rs  event_sender_holder.rs  lib.rs  reducer.rs  state_mapper.rs  state_provider.rs  store.rs  store_event.rs
