[package]
name = "tca"
version = "0.1.0"
edition = "2021"
authors = ["Nikita Patskov <patskovn@gmail.com>"]
description = "The Composable Architecture (TCA, for short) is a library for building applications in a consistent and understandable way, with composition, testing, and ergonomics in mind."
license = "MIT"
homepage = "https://github.com/patskovn/tca-rs.git"

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.81"
futures = "0.3.30"
lock_api = "0.4.12"
log = "0.4.22"
parking_lot = "0.12.3"
tokio = { version = "1.39.2", features = ["full"] }
